[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/enemies/ais/capybara.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=3]
radius = 104.0

[node name="AI" type="Node2D"]
script = ExtResource( 1 )

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
